Squash and Merge fix/properties-height-fix

--- a/src/sections/presentations.scss
+++ b/src/sections/presentations.scss
@@ -85,7 +85,7 @@ $panel-width: 290px;
       }
     }
     @media (max-width: 992px) {
-      height: calc(100vh - 125px);
+      height: calc(100vh - 185px);
     }
     @media (max-width: 768px) {
       width: 100%;
@@ -130,23 +130,34 @@ $panel-width: 290px;
     .ph-list {
     .editor-playlist {
       height: calc(100vh - 210px);
-      max-height: calc(100vh - 250px);
+      max-height: calc(100vh - 240px);
       @media (max-width: 768px) {
         margin-right: 0;
       }
     }
   }
-
-
+    .ph-settings {
+     @media (max-width: 768px) {
+        .scrollable-list {
+          max-height: calc(100vh - 350px) !important;
+        }
+    }
+    }
     .ph-properties {
       float: right;
       opacity: 0;
+        .scrollable-list {
+          max-height: calc(100vh - 240px);
+        }
       @media (max-width: 768px) {
         -webkit-transform: translateX(0);
         /* Safari */
         transform: translateX(0);
         float: none;
         display: none;
+        .scrollable-list {
+          max-height: calc(100vh - 430px);
+        }
       }
     }
     &.show-ph-properties {
@@ -259,7 +270,7 @@ $panel-width: 290px;
   }
   @media (max-width: 768px) {
     position: static;
-    bottom: 0;
+    bottom: -66px;
     z-index: 100;
   }
 }
